Done nicer CSS formatting to portfolio

--- a/classwork/index.html
+++ b/classwork/index.html
@@ -14,12 +14,57 @@
           }
 
           .warning {
-              background-color: red;
+              background-color: background-color:rgb(178,31,40);
           }
 
           h1.warning {
             font-style: italic;
           }
+
+          a {
+            font-family: monospace;
+            text-decoration: underline;
+            font-weight: none;
+          }
+
+          a:link {
+            color: green;
+          }
+
+          a:visited {
+            color: red;
+          }
+
+          a:hover {
+            text-decoration: none;
+            color: #00c;
+            font-family: cursive;
+          }
+
+          a:active {
+            font-weight: bold;
+          }
+
+          table, th, td {
+                border: 1px solid black;
+                border-collapse: collapse;
+                padding: 5px 0px 5px 10px;
+            }
+            table {
+                width: 100%;
+            }
+            th {
+                height: 25px;
+            }
+            tfoot td {
+                text-align: center;
+            }
+            tbody tr:nth-child(even) {
+                background-color: lemonchiffon;
+            }
+            tbody tr:nth-child(odd) {
+                background-color: lawngreen;
+            }
         </style>
     </head>
 
@@ -51,11 +96,14 @@
 
         <table border="1" width = "100%" >
           <caption>Contact Information</caption>
-                    <tr>
-                        <th>Grouping</th>
-                        <th colspan="2">Name</th>
-                        <th>Phone</th>
-                    </tr>
+            <thead>
+              <tr>
+                  <th>Grouping</th>
+                  <th colspan="2">Name</th>
+                  <th>Phone</th>
+              </tr>
+            </thead>
+              
                     <tr>
                         <td rowspan="2"> Friends </td>
                         <td>John</td>
