--- a/classwork/Portfolio/Bootstrap-example.html
+++ b/classwork/Portfolio/Bootstrap-example.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link href = "styles.css" rel = "stylesheet" type="text/css">
+
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>Bootstrap Sample Page</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+		<style>
+
+		</style>
 	</head>
+
 	<body>
+		<header class="jumbotron">
+		    <h1>Aidan Smith</h1>
+		    <h2 class="font-italic">Web Developer Extraordinaire</h2>
+		    <h3 class="text-right mt-5">Solving Web Dev problems every day!</h3>
+		</header>
+
+
+		<nav>
+			<a class="btn badge-pill" href="Contact Me.html">Contact Me</a>
+			<a class="btn" href="Projects">Projects</a>
+			<div class="clear-float"></div>
+		</nav>
+
+
 		<div class = "container">
 			<div class="row">
 				<div class="col-lg-3 col-md">
