Done the Restaurant website using Bootstrap

--- a/classwork/Resaurant/Contact Us.html
+++ b/classwork/Resaurant/Contact Us.html
@@ -6,26 +6,29 @@
     Most recent revision: 27/11/2020
 -->
 
-<html lang="en" style = "text-align:center">
+<html lang="en" style="text-align:center">
     <head>
-        <title>Contact Us</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+      <title>Contact Us</title>
+
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <link href = "styles\styles.css" rel = "stylesheet" type="text/css">
     </head>
 
     <body>
-        <header>
-            <h1>The Restaurant</h1>
-        </header>
+      <header>
+          <h1>The Restaurant</h1>
+          <h2 class="font-italic">Best Korean BBQ</h2>
+          <h3 class="text-right mt-5">The Street, London</h3>
+      </header>
 
         <nav>
-          <hr>
-          <table style="width:100%">
-            <tr>
-              <td style="width: 33%; text-align:right"> <a href="Home.html" id = "Home"> Home </a> </td>
-              <td style="width: 10%"> <a href="Menu.html" id = "Menu"> Menu </a> </td>
-              <td style="width: 33%; text-align:left"> <a href="Contact Us.html" id = "Contact Us"> Contact Us </a> </td>
-            </tr>
-          </table>
-          <hr>
+          <a class = "btn" href="Home.html" id = "Home"> Home </a>
+          <a class = "btn" href="Menu.html" id = "Menu"> Menu </a>
+          <a class = "btn" href="Contact Us.html" id = "Contact Us"> Contact Us </a>
+          <div class = "clear-float"></div>
         </nav>
 
         <form action="ContactInfo.html" method="POST">
@@ -85,9 +88,8 @@
         </form>
 
         <footer>
-          <hr>
-          <p> The street, London, UK, SE1 00A </p>
-          <p> 020 555 1234 </p>
+          <h3> The street, London, UK, SE1 00A </h3>
+          <p> <strong> 020 555 1234 </strong> </p>
         </footer>
     </body>
 </html>
