--- a/classwork/Resaurant/Menu.html
+++ b/classwork/Resaurant/Menu.html
@@ -6,61 +6,74 @@
     Most recent revision: 27/11/2020
 -->
 
-<html lang="en" style = "text-align: center">
+<html lang="en" style="text-align:center">
     <head>
-        <title>Menu</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+      <title>Menu</title>
+
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <link href = "styles\styles.css" rel = "stylesheet" type="text/css">
     </head>
 
     <body>
-        <header>
-            <h1>The Restaurant</h1>
-        </header>
+      <header>
+          <h1>The Restaurant</h1>
+          <h2 class="font-italic">Best Korean BBQ</h2>
+          <h3 class="text-right mt-5">The Street, London</h3>
+      </header>
 
         <nav>
-          <hr>
-          <table style="width:100%">
-            <tr>
-              <td style="width: 33%; text-align:right"> <a href="Home.html" id = "Home"> Home </a> </td>
-              <td style="width: 10%"> <a href="Menu.html" id = "Menu"> Menu </a> </td>
-              <td style="width: 33%; text-align:left"> <a href="Contact Us.html" id = "Contact Us"> Contact Us </a> </td>
-            </tr>
-          </table>
-          <hr>
+          <a class = "btn" href="Home.html" id = "Home"> Home </a>
+          <a class = "btn" href="Menu.html" id = "Menu"> Menu </a>
+          <a class = "btn" href="Contact Us.html" id = "Contact Us"> Contact Us </a>
+          <div class = "clear-float"></div>
         </nav>
 
-        <table width = "100%">
-          <caption> <strong> Meat </stong> </caption>
-          <tr>
-            <td style = "width:33%"> BBQ Pork Belly </th>
-            <td style = "width:33%"> New York Style Chicken </th>
-            <td style = "width:33%"> Beef Strips </th>
-          </tr>
-          <tr>
-            <td> £8.20 </th>
-            <td> £7.80 </th>
-            <td> £8.50 </th>
-          </tr>
-        </table>
+        <div class="container" style="text-align:center">
+          <h4>Meat</h4>
+          <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <p><strong>BBQ Pork Belly</strong> <br>£8.20</p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <p><strong>New York Style Chicken</strong> <br>£7.80</p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <p><strong>Beef Strips</strong> <br>£8.50</p>
+            </div>
+          </div>
 
-        <hr>
-        <table width = "100%" style = "font-weight:large">
-          <caption> <strong> Sides </strong> </caption>
-          <tr>
-            <td style = "width:33%"> Bap </th>
-            <td style = "width:33%"> Noodles </th>
-            <td style = "width:33%"> KFC </th>
-          </tr>
-          <tr>
-            <td> £2.00 </th>
-            <td> £3.20 </th>
-            <td> £5.20 </th>
-          </tr>
-        </table>
+          <h4>Sides</h4>
+          <div class="row" style="text-align: center">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <p><strong>Bap</strong> <br>£2.00</p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <p><strong>Noodles</strong> <br>£3.20</p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <p><strong>KFC</strong> <br>£5.20</p>
+            </div>
+          </div>
+
+          <h4>Drinks</h4>
+          <div class="row" style="text-align: center">
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <p><strong>Bottled Water</strong> <br>£2.00</p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <p><strong>Soft Drink</strong> <br>£2.80</p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12">
+              <p><strong>Milk Drink</strong> <br>£2.50</p>
+            </div>
+          </div>
 
         <footer>
-          <hr>
-          <p> The street, London, UK, SE1 00A </p>
-          <p> 020 555 1234 </p>
+          <h3> The street, London, UK, SE1 00A </h3>
+          <p> <strong> 020 555 1234 </strong> </p>
         </footer>
     </body>
 </html>
