--- a/classwork/javascript/displayMousePosition/DisplayMousePosition.html
+++ b/classwork/javascript/displayMousePosition/DisplayMousePosition.html
@@ -23,7 +23,8 @@
               </div>
           </fieldset>
           <div>
-              <button id="btnToggle" class="btn btn-success">Start mouse tracking.</button>
+              <button id="btnToggle" class="btn btn-success col" style="width:40%">Start mouse tracking.</button>
+              <button id="btnToggle2" class="btn btn-success col" style="width:40%">Start mouse tracking.</button>
           </div>
       </div>
       <script src="displayMousePosition.js"></script>
