--- a/classwork/Portfolio/Bootstrap-example.html
+++ b/classwork/Portfolio/Bootstrap-example.html
@@ -41,7 +41,30 @@
 				</div>
 
 			</div>
+
+
+			<div class="accordion" id="accordionExample">
+				<div class="card">
+					<div class="card-header" id="portfolio01">
+						<h5 class="mb-0">
+							<button type="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+								My first portfolio piece
+							</button>
+						</h5>
+					</div>
+
+					<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+          <div class="card-body">
+            <p><a href="" target="_blank">Name of Website</a></p>
+            <figure><img src="images/website-1778529_640.png" alt="Screenshot of home page" /></figure>
+          </div> <!-- end of .card-body div -->
+        </div> <!-- end of #collapsOne div -->
+				</div>
+
+			</div>
 		</div>
+
+
 
 
 
