--- a/classwork/javascript/luckySevens/luckySevens.html
+++ b/classwork/javascript/luckySevens/luckySevens.html
@@ -7,6 +7,28 @@
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
+    <style>
+      .input-icon {
+        position: relative;
+      }
+
+      .input-icon > i {
+        position: absolute;
+        display: block;
+        transform: translate(0, -50%);
+        top: 51px;
+        left: 15px;
+        pointer-events: none;
+        width: 25px;
+        text-align: center;
+        font-style: normal;
+      }
+
+      .input-icon > input {
+        padding-left: 25px;
+        padding-right: 0;
+      }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -14,25 +36,38 @@
         <form name="betting" class="needs-validation" onsubmit="return validate();" onreset="resetView();" novalidate>
 
             <div class="form-row">
-                <div class="form-group col">
+                <div class="form-group col input-icon">
                     <label for="starting">Starting Bet: </label>
-                    <input type='text' pattern='(^\d+?((\.\d{2})?)$)|(^\d+?((\.\d{0})?)$)'/ class="form-control" id="start" min = "0" required style="width:50%">
+                    <input type='text' pattern='(^\d+?((\.\d{2})?)$)|(^\d+?((\.\d{0})?)$)'/ class="form-control" id="start" min = "0" required style="width:50%" placeholder="0.00">
+                    <i>£</i>
                     <div class="invalid-feedback">
                         This is required and must have 0 or 2 decimal places.
                     </div>
                 </div>
             </div>
 
-            <div class="form-row" style = "margin-left: 0">
-              <li style = "list-style-type: none">
-                <label for="automatic"> Automatic: </label>
-                <input type="checkbox" id = "automatic" checked>
+            <div class="form-row" style="margin-left:0">
+              <li style="list-style-type:none">
+                <input type="radio" name = "playType" id = "instant" checked>
+                <label for="instant"> Instant </label>
+              </li>
+            </div>
+            <div class="form-row" style="margin-left:0">
+              <li style="list-style-type:none">
+                <input type="radio" name = "playType" id = "automatic">
+                <label for="automatic"> Automatic </label>
+              </li>
+            </div>
+            <div class="form-row" style="margin-left:0">
+              <li style="list-style-type:none">
+                <input type="radio" name = "playType" id = "manual">
+                <label for="manual"> Manual </label>
               </li>
             </div>
 
 
             <div class="form-row">
-                <div class="form-group col" id = "speedBox">
+                <div class="form-group col" id = "speedBox" style="display: none">
                     <label for="speed">Speed: </label>
                     <input type='number' class="form-control" id="speed" min = "1" value = "1" style="width:50%">
                     <div class="invalid-feedback">
