--- a/classwork/Resaurant/Home.html
+++ b/classwork/Resaurant/Home.html
@@ -15,6 +15,7 @@
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link href = "styles\styles.css" rel = "stylesheet" type="text/css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -25,11 +26,16 @@
       </header>
 
         <nav>
-          <a class = "btn" href="Home.html" id = "Home"> Home </a>
+          <a class = "btn fa fa-home" href="Home.html" id = "Home" style = "background-color:#3C78AB; font-size:24px" ></a>
           <a class = "btn" href="Menu.html" id = "Menu"> Menu </a>
           <a class = "btn" href="Contact Us.html" id = "Contact Us"> Contact Us </a>
           <div class = "clear-float"></div>
         </nav>
+
+        <div class="jumbotron">
+      	   <h4>Big News</h4>
+      		 <h2>We're opening in a new location</h2>
+        </div>
 
         <div class="container">
 
@@ -56,10 +62,11 @@
           <p> <strong> 020 555 1234 </strong> </p>
         </footer>
 
-
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+        <noscript>
+            alert("You have javascript disabled. This will effect your viewing experience.");
+        </noscript>
     </body>
 </html>
