--- a/classwork/javascript/luckySevens/luckySevens.html
+++ b/classwork/javascript/luckySevens/luckySevens.html
@@ -37,7 +37,7 @@
 
             <div class="form-row">
                 <div class="form-group col input-icon">
-                    <label for="starting">Starting Bet: </label>
+                    <label for="start">Starting Bet: </label>
                     <input type='text' pattern='(^\d+?((\.\d{2})?)$)|(^\d+?((\.\d{0})?)$)'/ class="form-control" id="start" min = "0" required style="width:50%" placeholder="0.00">
                     <i>£</i>
                     <div class="invalid-feedback">
