lots on restaurant

--- a/classwork/Resaurant/Menu.html
+++ b/classwork/Resaurant/Menu.html
@@ -15,7 +15,7 @@
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link href = "styles\styles.css" rel = "stylesheet" type="text/css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script src="https://kit.fontawesome.com/7ca58b5fbf.js" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
       <style>
@@ -33,36 +33,32 @@
       </header>
 
         <nav>
-          <a class = "btn fa fa-home" href="Home.html" id = "Home" style = "font-size:24px" ></a>
+          <a class = "btn fas fa-home" href="Home.html" id = "Home" style = "font-size:24px" ></a>
           <a class = "btn" href="Menu.html" id = "Menu" style = "background-color:#3C78AB"> Menu </a>
           <a class = "btn" href="Contact Us.html" id = "Contact Us"> Contact Us </a>
           <div class = "clear-float"></div>
         </nav>
 
-        <h4> Menu </h4>
-
         <div id="menu_carousel" class="carousel slide" data-ride="carousel">
-          <ul class="carousel-indicators">
-            <li data-target="#menu_carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#menu_carousel" data-slide-to="1"></li>
-            <li data-target="#menu_carousel" data-slide-to="2"></li>
-          </ul>
 
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <strong>We're opening a new location! </strong>
+              <strong><i class="fas fa-people-carry"></i> We're opening a new location! <i class="fas fa-people-carry"></i></strong>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item Christmas">
               <strong>We're rolling out our seasonal menu, with special options for this season.</strong>
             </div>
             <div class="carousel-item">
-              <strong>The Drink of the Month is TSG Special Brew.</strong>
+              <strong> <i class="fas fa-cocktail"></i> The Drink of the Month is TSG Special Brew. <i class="fas fa-cocktail"></i></strong>
             </div>
           </div>
 
           <a class="carousel-control-prev" href="#menu_carousel" data-slide="prev"></a>
           <a class="carousel-control-next" href="#menu_carousel" data-slide="next"></a>
+
         </div>
+
+        <h4> Menu </h4>
 
         <div class="container" style="text-align:center">
           <h4>Meat</h4>
@@ -125,7 +121,7 @@
 
           <footer>
             <h3> The street, London, UK, SE1 00A </h3>
-            <p> <strong> 020 555 1234 </strong> </p>
+            <p> 020 555 1234 </p>
           </footer>
 
           <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
