--- a/classwork/Resaurant/Contact Us.html
+++ b/classwork/Resaurant/Contact Us.html
@@ -15,7 +15,8 @@
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link href = "styles\styles.css" rel = "stylesheet" type="text/css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script src="https://kit.fontawesome.com/7ca58b5fbf.js" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
       <style>
         label {
@@ -56,11 +57,29 @@
       </header>
 
         <nav>
-          <a class = "btn fa fa-home" href="Home.html" id = "Home" style = "font-size:24px" ></a>
+          <a class = "btn fas fa-home" href="Home.html" id = "Home" style = "font-size:24px" ></a>
           <a class = "btn" href="Menu.html" id = "Menu"> Menu </a>
           <a class = "btn" href="Contact Us.html" id = "Contact Us" style = "background-color:#3C78AB"> Contact Us </a>
           <div class = "clear-float"></div>
         </nav>
+
+        <div id="contact_carousel" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <strong><i class="fas fa-people-carry"></i> We're opening a new location! <i class="fas fa-people-carry"></i></strong>
+            </div>
+            <div class="carousel-item Christmas">
+              <strong>We're rolling out our seasonal menu, with special options for this season.</strong>
+            </div>
+            <div class="carousel-item">
+              <strong> <i class="fas fa-cocktail"></i> The Drink of the Month is TSG Special Brew. <i class="fas fa-cocktail"></i></strong>
+            </div>
+          </div>
+
+          <a class="carousel-control-prev" href="#contact_carousel" data-slide="prev"></a>
+          <a class="carousel-control-next" href="#contact_carousel" data-slide="next"></a>
+
+        </div>
 
         <h4>Contact Form</h4>
 
@@ -151,9 +170,15 @@
 
         <footer>
           <h3> The street, London, UK, SE1 00A </h3>
-          <p> <strong> 020 555 1234 </strong> </p>
+          <p> 020 555 1234 </p>
         </footer>
 
         <script src="scripts\contact_form.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <noscript>
+            alert("You have javascript disabled. This will effect your viewing experience.");
+        </noscript>
     </body>
 </html>
